<resources>
    <string name="app_name">My Modules</string>
    <string name="tv1">C346 Android Programming</string>
    <string name="tv2">C235 IT Security And Management</string>
    <string name="tv3">C203 Web AppIn Development in Php</string>
    <string name="tv4">C218 UI/UX Design for Apps</string>
    <string name="tv5">C206 Software Development Process</string>
    <string name="tv6">C349 iPad Programming</string>
    <string name="more_info">More Info</string>
    <string name="back">Back</string>
</resources>