<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#A6C5DF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMyModules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="My Modules"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="201dp"
            app:srcCompat="@drawable/image1"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:id="@+id/tvMod1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/tv1"
            android:textAlignment="center"
            android:textSize="18dp"
            android:fontFamily="casual"
            />

        <TextView
            android:id="@+id/tvMod2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv2"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/tvMod3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv3"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/tvMod4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv4"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/tvMod5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv5"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/tvMod6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv6"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:fontFamily="casual"/>
    </LinearLayout>

</LinearLayout>